--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <button id="answer">answer</button>
   <button id="hangup">hangup</button>
   <pre id="chat">HELLO WORLD</pre>
-  <video id="local"></div>
-  <video id="remote"></div>
+  <video id="local" autoplay muted></div>
+  <video id="remote" autoplay muted></div>
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/webrtc-adapter/adapter.js"></script>
   <script src="/js/main.js"></script>
